--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
     "streambuf": "cpp",
     "typeinfo": "cpp",
     "ctime": "cpp",
-    "fstream": "cpp"
+    "fstream": "cpp",
+    "variant": "cpp"
   }
 }
